--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -34,11 +34,14 @@
                   <select id="parent_id" class="form-control" [disabled]="selectedCategory?.level >= 2"
                     (change)="updateSelectedCategory($event.target.value)">
                     <ng-container *ngFor="let item of category">
-                      <option [value]="item.id">{{getIndentation(item.level)}} {{item.name}}</option>
-                      <ng-container *ngIf="item.children">
-                        <option *ngFor="let child of item.children" [value]="child.id">
-                          {{getIndentation(child.level)}} {{child.name}}
-                        </option>
+                      <option disabled placeholder="--Chooses category--"></option>
+                      <ng-container>
+                        <option [value]="item.id">{{getIndentation(item.level)}} {{item.name}}</option>
+                        <ng-container *ngIf="item.children">
+                          <option *ngFor="let child of item.children" [value]="child.id">
+                            {{getIndentation(child.level)}} {{child.name}}
+                          </option>
+                        </ng-container>
                       </ng-container>
                     </ng-container>
                   </select>
@@ -51,7 +54,7 @@
               <div class="col-lg-12">
                 <div class="form-group">
                   <label class="form-control-label" for="input-categories">Name</label>
-                  <input type="text" id="input-name" class="form-control form-control-alternative" formControlName="name"
+                  <input type="text" id="name" class="form-control form-control-alternative" formControlName="name"
                     placeholder="Name">
                 </div>
                 <div
