--- a/src/app/pages/discount/update/update.discount.component.html
+++ b/src/app/pages/discount/update/update.discount.component.html
@@ -1,46 +1,40 @@
-<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
-  style="min-height: 200px; background-size: cover; background-position: center top;">
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 200px; background-size: cover; background-position: center top;">
   <!-- Mask -->
   <span class="mask bg-gradient-danger opacity-8"></span>
-
+ 
 </div>
 <div class="container-fluid mt--7">
-
-  <div class="col-xl- order-xl-1">
-    <div class="card bg-secondary shadow">
-      <div class="card-header bg-white border-0">
-        <div class="row align-items-center">
-          <div class="col-8">
-            <h3 class="mb-0">Create/Update Category</h3>
-          </div>
-          <div class="col-4 text-right">
-            <form [formGroup]="dataForm" (ngSubmit)="save()">
-              <a routerLink="/system-admin/discount" class="btn btn-sm btn-info mr-4">Back</a>
-              <button type="submit" [disabled]="dataForm.invalid"
-                class="btn btn-sm btn-default float-right">Save</button>
-            </form>
-          </div>
+  
+    <div class="col-xl- order-xl-1">
+      <div class="card bg-secondary shadow">
+        <div class="card-header bg-white border-0">
+          <div class="row align-items-center">  
+            <div class="col-8">
+              <h3 class="mb-0">Create/Update Category</h3>
+            </div>
+            <div class="col-4 text-right">
+              <form [formGroup]="dataForm" (ngSubmit)="save()">
+                <a routerLink="/system-admin/discount" class="btn btn-sm btn-info mr-4">Back</a>
+                <button type="submit" [disabled]="dataForm.invalid" class="btn btn-sm btn-default float-right">Save</button>
+              </form>
+            </div>        
+          </div> 
         </div>
-      </div>
-      <div class="card-body">
-        <form [formGroup]="dataForm" (ngSubmit)="save()">
-          <div class="pl-lg-4">
-            <div class="row">
-              <div class="col-md-6" style="display: none;">
-                <div class="form-group">
-                  <label class="form-control-label" for="id">Id</label>
-                  <input type="text" id="input-code" formControlName="id" class="form-control form-control-alternative"
-                    placeholder="Id">
+        <div class="card-body">
+          <form [formGroup]="dataForm" (ngSubmit)="save()">
+            <div class="pl-lg-4">
+              <div class="row">
+                <div class="col-md-6" style="display: none;">
+                  <div class="form-group">
+                      <label class="form-control-label" for="id">Id</label>
+                      <input type="text" id="input-code" formControlName="id" class="form-control form-control-alternative" placeholder="Id">
+                  </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label class="form-control-label" for="code">Code</label>
                     <input type="text" id="input-code" formControlName="code" class="form-control form-control-alternative" placeholder="Code">
-                    <div *ngIf="dataForm.get('code').errors?.required" class="text-danger">Code không được bỏ trống!</div>
-                    <div *ngIf="dataForm.get('code').errors?.minlength" class="text-danger">Code không thể < 3 kí tự.</div>
-                    <div *ngIf="dataForm.get('code').errors?.maxlength" class="text-danger">Code không thể > 20 kí tự!</div>
-                    <div *ngIf="dataForm.get('code').hasError('whitespace')" class="text-danger">Code không thể chỉ chứa khoảng trống.</div>
-                    <!-- <div *ngIf="dataForm.get('code').invalid && (dataForm.get('code').dirty || dataForm.get('code').touched)">
+                    <div *ngIf="dataForm.get('code').invalid && (dataForm.get('code').dirty || dataForm.get('code').touched)">
                       <div *ngIf="dataForm.get('code').errors?.required" class="text-danger">
                         Code không được bỏ trống!
                       </div>
@@ -53,7 +47,7 @@
                       <div *ngIf="dataForm.get('code').hasError('whitespace')" class="text-danger">
                         Code không thể chỉ chứa khoảng trống.
                       </div>
-                    </div> -->
+                    </div>
                   </div>               
                 </div>
                 <div class="col-md-6">
@@ -121,8 +115,7 @@
               </div>
             </div>
         </form>
-
-                <div class="col-md-12">
+                <!-- <div class="col-md-12">
                   <div class="from-group">
                     <table class="table">
                       <thead>
@@ -144,7 +137,7 @@
                       </tbody>
                     </table>
                   </div>
-                </div>
+                </div> -->
                 <div class="modal fade" id="myModal">
                   <div class="modal-dialog">
                     <div class="modal-content"> 
