--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="card-body">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
+        <form (ngSubmit)="save()" [formGroup]="editForm">
           <div class="pl-lg-4">
             <div class="row">
               <div class="col-md-12">
@@ -35,10 +35,10 @@
                     (change)="updateSelectedCategory($event.target.value)">
                     <ng-container *ngFor="let item of category">
                       <option disabled placeholder="--Chooses category--"></option>
-                      <ng-container>
+                      <ng-container formControlName="parent_id">
                         <option [value]="item.id">{{getIndentation(item.level)}} {{item.name}}</option>
                         <ng-container *ngIf="item.children">
-                          <option *ngFor="let child of item.children" [value]="child.id">
+                          <option *ngFor="let child of item.children" [value]="child.id" [disabled]="true">
                             {{getIndentation(child.level)}} {{child.name}}
                           </option>
                         </ng-container>
@@ -52,10 +52,17 @@
           <div class="pl-lg-4">
             <div class="row">
               <div class="col-lg-12">
+                <div class="col-md-6" style="display: none;">
+                  <div class="form-group">
+                    <label class="form-control-label" for="id">Id</label>
+                    <input type="text" id="input-code" formControlName="id"
+                      class="form-control form-control-alternative" placeholder="Id">
+                  </div>
+                </div>
                 <div class="form-group">
                   <label class="form-control-label" for="input-categories">Name</label>
-                  <input type="text" id="name" class="form-control form-control-alternative" formControlName="name"
-                    placeholder="Name">
+                  <input type="text" id="input-name" class="form-control form-control-alternative"
+                    formControlName="name" placeholder="Name">
                 </div>
                 <div
                   *ngIf="editForm.get('name')!.invalid && (editForm.get('name')!.dirty || editForm.get('name')!.touched)">
@@ -65,7 +72,7 @@
                 </div>
                 <div class="form-group">
                   <label class="form-control-label" for="input-status">Status</label>
-                  <div class="control" class="form-check form-switch form-switch-md mb-2">
+                  <div class="control" class="form-check form-switch form-switch-md mb-5">
                     <input type="checkbox" id="is_delete" name="is_delete" class="form-check-input"
                       formControlName="is_delete">
                   </div>
