--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -15,7 +15,7 @@
           <div class="col-4 text-right">
 
             <div>
-              <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
+              <form (ngSubmit)="save()" [formGroup]="editForm">
                 <a [routerLink]="['/system-admin/category']" class="btn btn-sm btn-info mr-4">Back</a>
                 <button type="submit" [disabled]="editForm.invalid" href="javascript:void(0)"
                   class="btn btn-sm btn-default float-right">Save</button>
@@ -37,7 +37,7 @@
                       <option disabled placeholder="--Chooses category--"></option>
                       <option [value]="item.id">{{getIndentation(item.level)}} {{item.name}}</option>
                       <ng-container *ngIf="item.children">
-                        <option *ngFor="let child of item.children" [value]="child.id">
+                        <option *ngFor="let child of item.children" [value]="child.id" [disabled]="true">
                           {{getIndentation(child.level)}} {{child.name}}
                         </option>
                       </ng-container>
