--- a/src/app/pages/discount/update/update.discount.component.html
+++ b/src/app/pages/discount/update/update.discount.component.html
@@ -100,11 +100,7 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label class="form-control-label" for="input-status">Status</label>
-                    <!-- <div class="form-check form-switch">
-                      <input type="checkbox" id="isActive" formControlName="isActive" class="form-check-input" checked="true">
-                      <label class="form-check-label" for="isActive"></label>
-                    </div> -->
-                    <div class="form-check form-switch">
+                    <div class="form-check form-switch" style="margin-left: 20px;">
                       <input class="form-check-input" type="checkbox" id="mySwitch" name="isActive" formControlName="isActive">
                     </div>
                   </div>
