in-progress: course

--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -70,7 +70,7 @@
                 </div>
                 <div class="form-group">
                   <label class="form-control-label" for="input-status">Status</label>
-                  <div class="control" class="form-check form-switch form-switch-md mb-5">
+                  <div class="control" class="form-check form-switch form-switch-md mb">
                     <input type="checkbox" id="is_delete" name="is_delete" class="form-check-input"
                       formControlName="is_delete">
                   </div>
