--- a/src/app/pages/course/update/update.course.component.html
+++ b/src/app/pages/course/update/update.course.component.html
@@ -1,91 +1,102 @@
-<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 200px; background-size: cover; background-position: center top;">
-    <!-- Mask -->
-    <span class="mask bg-gradient-danger opacity-8"></span>
-   
-  </div>
-  <div class="container-fluid mt--7">
-    
-      <div class="col-xl- order-xl-1">
-        <div class="card bg-secondary shadow">
-          <div class="card-header bg-white border-0">
-            <div class="row align-items-center">
-              <div class="col-8">
-                <h3 class="mb-0">Create/Update Course</h3>
-              </div>
-              <div class="col-4 text-right">
-                <a href="/#/system-admin/course" class="btn btn-sm btn-info mr-4">Back</a>
-                <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
-              </div>
-            </div>
+<div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center"
+  style="min-height: 200px; background-size: cover; background-position: center top;">
+  <!-- Mask -->
+  <span class="mask bg-gradient-danger opacity-8"></span>
+
+</div>
+<div class="container-fluid mt--7">
+
+  <div class="col-xl- order-xl-1">
+    <div class="card bg-secondary shadow">
+      <div class="card-header bg-white border-0">
+        <div class="row align-items-center">
+          <div class="col-8">
+            <h3 class="mb-0">Create/Update Course</h3>
           </div>
-          <div class="card-body">
-            <form>
-              <div class="pl-lg-4">
-                <div class="row">
-                  <div class="col-md-12">    
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label class="form-control-label" for="input-id">ID :</label>
-                      <input type="text" id="input-id" class="form-control form-control-alternative" placeholder="ID Lesson">
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                        <label class="form-control-label" for="input-title">Title :</label>
-                        <input type="text" id="input-title" class="form-control form-control-alternative" placeholder="Title">
-                      </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                        <label class="form-control-label" for="input-price">Price :</label>
-                        <input type="text" id="input-price" class="form-control form-control-alternative" placeholder="Price">
-                      </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                        <label class="form-control-label" for="input-enrollmentCount">Enrollment Count :</label>
-                        <input type="text" id="input-enrollmentCount" class="form-control form-control-alternative" placeholder="Enrollment Count">
-                      </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                        <label class="form-control-label" for="input-thumbnail">Thumbnail :</label>
-                        <input type="text" id="input-thumbnail" class="form-control form-control-alternative" placeholder="Thumbnail">
-                      </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                        <label class="form-control-label" for="input-userID">User ID :</label>
-                        <input type="text" id="input-userID" class="form-control form-control-alternative" placeholder="User ID">
-                      </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                        <label class="form-control-label" for="input-categoryID">Category ID :</label>
-                        <input type="text" id="input-categoryID" class="form-control form-control-alternative" placeholder="Category ID">
-                      </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                        <label class="form-control-label" for="input-description">Description :</label>
-                        <textarea  type="text" id="input-description" class="form-control form-control-alternative" placeholder="Description"></textarea>
-                      </div>
-                  </div>
-                  <div class="col-lg-12">
-                    <div class="form-group">
-                    <label class="form-control-label" for="input-status">Status</label>
-                    <div class="control">
-                      <label class="form-check-label mb-5">
-                        <input type="checkbox" name="answer" [checked]="selectedStatus"> 
-                      </label>
-                        </div>
-                        </div>
-                    </div>
-                 </div>
-                </div>
-            </form>
+          <div class="col-4 text-right">
+            <a href="/system-admin/course" class="btn btn-sm btn-info mr-4">Back</a>
+            <a href="javascript:void(0)" class="btn btn-sm btn-default float-right">Save</a>
           </div>
         </div>
       </div>
+      <div class="card-body">
+        <form>
+          <div class="pl-lg-4">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="form-group" style="display: none;">
+                  <label class="form-control-label" for="input-id">ID :</label>
+                  <input type="text" id="input-id" class="form-control form-control-alternative"
+                    placeholder="ID Lesson">
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-title">Thumbnail:</label>
+                  
+                  <!-- Hiển thị ảnh đã chọn -->
+                  <img *ngIf="thumbnailPath" [src]="thumbnailPath" alt="Thumbnail" class="img-thumbnail mb-2" style="max-width: 100%; height: auto;">
+              
+                  <!-- Nút chọn file -->
+                  <div class="custom-file">
+                    <input type="file" class="custom-file-input" id="input-thumbnail" (change)="onFileSelected($event)">
+                    <label class="custom-file-label" for="input-thumbnail">Chọn ảnh</label>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-title">Title :</label>
+                  <input type="text" id="input-title" class="form-control form-control-alternative" placeholder="Title">
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-price">Price :</label>
+                  <input type="text" id="input-price" class="form-control form-control-alternative" placeholder="Price">
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-enrollmentCount">Enrollment Count :</label>
+                  <input type="text" id="input-enrollmentCount" class="form-control form-control-alternative"
+                    placeholder="Enrollment Count">
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-userID">User :</label>
+                  <input type="text" id="input-userID" class="form-control form-control-alternative"
+                    placeholder="User">
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-categoryID">Category :</label>
+                  <input type="text" id="input-categoryID" class="form-control form-control-alternative"
+                    placeholder="Category">
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-description">Description :</label>
+                  <textarea type="text" id="input-description" class="form-control form-control-alternative"
+                    placeholder="Description"></textarea>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="form-group">
+                  <label class="form-control-label" for="input-status">Status</label>
+                  <div class="control" class="form-check form-switch form-switch-md mb-5">
+                    <input type="checkbox" id="is_delete" name="is_delete" class="form-check-input"
+                      formControlName="is_delete">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
+</div>
