--- a/src/app/pages/category/update/update.category.component.html
+++ b/src/app/pages/category/update/update.category.component.html
@@ -31,18 +31,21 @@
               <div class="col-md-12">
                 <div class="form-group">
                   <label class="form-control-label" for="input-parentId">Parent ID</label>
-                  <select id="parent_id" class="form-control" [disabled]="selectedCategory?.level >= 2"
-                    (change)="updateSelectedCategory($event.target.value)" formControlName="parent_id">
+                  <select id="parent_id" class="form-control" formControlName="parent_id"
+                    [disabled]="selectedCategory?.level >= 2" (change)="updateSelectedCategory($event.target.value)">
                     <ng-container *ngFor="let item of category">
-                      <option disabled placeholder="--Chooses category--"></option>
-                      <option [value]="item.id">{{getIndentation(item.level)}} {{item.name}}</option>
+                      <option value="{{item.id.toString()}}">{{getIndentation(item.level)}} {{item.name}}</option>
+                      <option [ngValue]="item.id.toString()" [disabled]="item.level >= 2">
+                        {{getIndentation(item.level)}} {{item.name}}
+                      </option>
                       <ng-container *ngIf="item.children">
-                        <option *ngFor="let child of item.children" [value]="child.id" [disabled]="true">
+                        <option *ngFor="let child of item.children" [value]="child.id.toString()" [disabled]="true">
                           {{getIndentation(child.level)}} {{child.name}}
                         </option>
                       </ng-container>
                     </ng-container>
                   </select>
+                  <!-- <input type="text" formControlName="parent_id"> -->
                 </div>
               </div>
             </div>
