--- a/src/app/pages/user-profile/list/user-profile.component.html
+++ b/src/app/pages/user-profile/list/user-profile.component.html
@@ -84,23 +84,27 @@
         <div class="card-footer py-4">
           <nav aria-label="...">
             <ul class="pagination justify-content-end mb-0">
-              <li class="page-item disabled">
-                <a class="page-link" href="javascript:void(0)" tabindex="-1">
+              <li class="page-item disabled" *ngIf="currentPage > 1">
+                <a class="page-link" tabindex="-1" (click)="onPageChange(1)">
                   <i class="fas fa-angle-left"></i>
-                  <span class="sr-only">Previous</span>
+                  <span class="sr-only" >First</span>
                 </a>
               </li>
-              <li class="page-item active">
-                <a class="page-link" href="javascript:void(0)">1</a>
+              <li class="page-item active" *ngIf="currentPage > 1">
+                <a class="page-link" (click)="onPageChange(currentPage - 1)">Previous</a>
               </li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+              <ng-container *ngFor="let page of visiblePages">
+                <li class="page-item" [ngClass]="{'active': page === currentPage}">
+                  <a class="page-link" (click)="onPageChange(page)">{{ page }} <span class="sr-only">(current)</span></a>
+                </li>
+              </ng-container>
+              <li class="page-item" *ngIf="currentPage < totalPages">
+                <a class="page-link" (click)="onPageChange(currentPage + 1)">Next</a>
               </li>
-              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">
+              <li class="page-item" *ngIf="currentPage < totalPages">
+                <a class="page-link" (click)="onPageChange(totalPages)">
                   <i class="fas fa-angle-right"></i>
-                  <span class="sr-only">Next</span>
+                  <span class="sr-only">Last</span>
                 </a>
               </li>
             </ul>
